tests/miz/pass/types/pass_types_element_variable_001.miz
definition
  let X be set;
  let x be Element of X;
  theorem
    x = x;
  proof
  end;
end;
