tests/miz/fail/soundness/fail_soundness_existential_witness_escape_001.miz
theorem
  for X being set holds ex y being Element of X st y = y;
proof
end;
